finish background + appendix, and fix capitalisation for control plane

--- a/backmatter/00_acronyms.tex
+++ b/backmatter/00_acronyms.tex
@@ -5,22 +5,28 @@
 \begin{description}
 
 \item[3GPP] 3rd Generation Public Partnership Project
+\item[AMF] Access and Mobility Management Function
 \item[CAKE] Common Applications Kept Enhanced 
+\item[DN] Data Network
 \item[eBPF] enhanced Berkeley Packet Filter
+\item[eNB] enhanced NodeB
 \item[EPC] Evolved Packet Core
 \item[FEC] Forward Error Correction
 \item[FIFO] First In First Out
 \item[FTTH] Fibre to the Home 
 \item[GEO] Geostationary Orbit
+\item[gNB] gNodeB
 \item[GTP] GPRS Tunneling Protocol 
 \item[HTB] Hierarchical Token Bucket 
+\item[HTTP] Hypertext Transfer Protocol
+\item[IETF] Internet Engineering Task Force
 \item[IIoT] Industrial Internet of Things
 \item[ILP] Integer Linear Programming
 \item[IoT] Internet of Things
 \item[IP] Internet Protocol
 \item[IPv4] Internet Protocol version 4
 \item[IPv6] Internet Protocol version 6
-\item[ISP] Internet Service Providerovider 
+\item[ISP] Internet Service Provider
 \item[LAN] Local Area Network
 \item[LEO] Lower Earth Orbit
 \item[LTE] Long Term Evolution
@@ -28,27 +34,34 @@
 \item[NF] Network Function
 \item[NPN] Non Public Network
 \item[NP] Nondeterministic Polynomial time 
+\item[NSA] non-standalone
 \item[NTN] Non Terrestrial Network
+\item[PCF] Policy Control Function
+\item[PFCP] Packet Forwarding Control Protocol
 \item[POEF] Packet Ordering and Elimination Function
 \item[POF] Packet Ordering Function
 \item[PTP] Precision Time Protocol
 \item[QoS] Quality of Service
 \item[RAN] Radio Access Network 
 \item[RTT] Round Trip Time
+\item[SA] standalone
 \item[SBI] Service Based Interface
 \item[SCNE] Satellite Constellation Network Emulator
 \item[SCTP] Stream Transmission Control Protocol
+\item[SDN] Software Defined Network
+\item[SMF] Session Management Function
 \item[TCP] Transmission Control Protocol
 \item[tc] Traffic Control
 \item[TSN] Time Sensitive Networking
+\item[UDM] Unified Data Mangement
 \item[UDP] User Datagram Protocol
 \item[UE] User Equipment
+\item[UPF] User Plane Function
 \item[UPF] User Plane Function 
 \item[VoIP] Voice over IP
 \item[WAN] Wide Area Network
 \item[WiFi] Wireless Fidelity
 \item[WLAN] Wireless Local Area Network
 \item[WSN] Wireless Sensor Network
-
 
 \end{description}
