--- a/backmatter/02_example_gtp.tex
+++ b/backmatter/02_example_gtp.tex
@@ -4,7 +4,7 @@
 \chapter{Example of Custom GTP Header Format}
 \label{appendix:gtp}
 
-This appendix contains a screenshot of a packet captured during normal operation of the WAN Connector (figure \ref{fig:wshark}), displayed using wireshark \footnote{https://www.wireshark.org/}. The packet dissection shows the use of the GTP hedaer, along with the additional custom header, which is 8 bytes long. The custom header consists of 2 bytes of regular overhead from the GTP protocol as well as a 4 byte timestamp and 2 spare bytes. This packet was captured during the jitter experiment.
+This appendix contains a screenshot of a packet captured during normal operation of the WAN Connector (figure \ref{fig:wshark}), displayed using wireshark \footnote{https://www.wireshark.org/}. The packet dissection shows the use of the GTP hedaer, along with the additional custom header, which is 8 bytes long. The custom header consists of 2 bytes of regular overhead from the GTP protocol as well as a 4 byte timestamp and 2 spare bytes. This packet was captured during regular operation of the WAN Connector, in the jitter experiment.
 
 \begin{figure}[ht]
     \centering
