--- a/mainmatter/01_introduction.tex
+++ b/mainmatter/01_introduction.tex
@@ -33,14 +33,14 @@ The goal of this thesis is to design and provide an implementation of a Wide Are
 
 Looking at Figure \ref{fig:telco} we can see how this is envisioned to work. WAN connectors are deployed both in the geographically distributed 5G campus network, which has more than one egress link, and in the core. Then, using the multiple outgoing links, they backhaul traffic to the other site, while respecting the traffic's QoS requirements. This can be especially beneficial for critical applications (e.g. at industrial sites), which are in locations that do not have access to optical fibre for backhaul.
 
-For a 5G deployment the proposed WAN connector could be deployed in between two User Plane Functions (UPF) , in order to provide deterministic backhaul. The architecture for such a deployment is shown in Figure \ref{fig:telco}. Further, the on-site UPF is not a strict requirement; it is also feasible to connect the RAN directly to the WAN Connector.
+For a 5G deployment the proposed WAN connector could be deployed in between two User Plane Functions (UPF's) , in order to provide deterministic backhaul. The architecture for such a deployment is shown in Figure \ref{fig:telco}. Further, the on-site UPF is not a strict requirement; it is also feasible to connect the RAN directly to the WAN Connector.
 
 
 %%=========================================
 \section{Scope}
 \label{sec:scope}
 
-While a high level design will be presented, and a first implementation will be tested, this implementation will not be industry grade and should not be judged next to commercial packet processing products.  Furthermore, an explicit specification for the format of communication with the 5G Core's Control Plane is largely beyond the scope of this thesis. Although an interface to the 5G Core's Session Management Function (SMF) will be assumed, it is not specified nor implemented. By some means the flows and their requirements must be communicated to the WAN Connector over the Control Plane, however an exact description of the data formats used in this communication will not occur. The User plane interface to the WAN Connector is not described either. However, the WAN Connector may be able to act in a fashion which is opaque to the User Plane component with which it is interacting (RAN or UPF). The WAN Connector can bridge both the N3 or N9 reference points. The user plane traffic is simply forwarded to the WAN Connector and backhauled to the second WAN Connector, which reintroduces it into the other User plane component. No part of the user plane needs to be aware that the WAN Connector is sitting in the middle.
+While a high level design will be presented, and a first implementation will be tested, this implementation will not be industry grade and should not be judged next to commercial packet processing products.  Furthermore, an explicit specification for the format of communication with the 5G Core's control plane is largely beyond the scope of this thesis. Although an interface to the 5G Core's Session Management Function (SMF) will be assumed, it is not specified nor implemented. By some means the flows and their requirements must be communicated to the WAN Connector over the control plane, however an exact description of the data formats used in this communication will not occur. The user plane interface to the WAN Connector is not described either. However, the WAN Connector may be able to act in a fashion which is opaque to the user plane component with which it is interacting (RAN or UPF). The WAN Connector can bridge both the N3 or N9 reference points. The user plane traffic is simply forwarded to the WAN Connector and backhauled to the second WAN Connector, which reintroduces it into the other user plane component. No part of the user plane needs to be aware that the WAN Connector is sitting in the middle.
 
 Lastly, in the process of investigating multi-pathing for deterministic backhaul, this thesis will not actually test the WAN Connector in a real deployment at a remote site. Additionally, the tests will not instantiate a full 5G Core network for the tests, and will not feature UPF's, a RAN, nor UE's (like in graphic number \ref{fig:telco}).
 
