--- a/mainmatter/04_approach.tex
+++ b/mainmatter/04_approach.tex
@@ -46,7 +46,7 @@ This chapter reviews the ways in which the requirements of the previous chapter 
 \section{Skeleton Structure}
 \label{sec:approach:plan}
 
-From the outset it was decided to use a Control-User Plane split. The packet processing and forwarding is performed in the user plane, and the control plane makes the high level decisions about which packets to send where, and in this case, on which outgoing interface to send them. The data plane is simple and only performs the time critical packet processing, and blindly follows the instructions of the control plane. This type of architecture is common in modern software-based networks, for example OpenFlow, the Evolved Packet Core (from LTE), and the 5G core all implement this kind of Control-Data-Plane split.
+From the outset it was decided to use a control-user plane split. The packet processing and forwarding is performed in the user plane, and the control plane makes the high level decisions about which packets to send where, and in this case, on which outgoing interface to send them. The data plane is simple and only performs the time critical packet processing, and blindly follows the instructions of the control plane. This type of architecture is common in modern software-based networks, for example OpenFlow, the Evolved Packet Core (from LTE), and the 5G core all implement this kind of control-data plane split.
 
 However, this decision immediately locks one into certain positions. For example, this requires a method of communication between the data plane and the control plane, it also means that the state machine that represents the WAN Connector becomes more complex, and complexity always brings with it a greater danger for hidden mistakes and fallacies. The benefit is that the user plane function does not need any complex decision making logic, thus simplifying its internal architecture. Further, these separate components can then be deployed at different locations, and scaled up or out with greater ease.
 
@@ -56,7 +56,7 @@ However, this decision immediately locks one into certain positions. For example
 
 Determinism, in a networking context, refers to the ability of a network to supply specific QoS requirements with extremely high degrees of certainty. IP flows and applications running in these networks are assured bounded latency, jitter, and packet loss. To that extent, while the Deterministic Networking (DetNet) specification comes with several recommendations for how to achieve determinism it does not define determinism. A network which does not fully comply to these specifications may still call itself determinstic (but it may not say it is a DetNet). Since this thesis aims to provide determinstic backhaul, it is not required to follow the DetNet specifications in any form. Though, it does make sense to consider what solutions they have proposed for determinism, since ultimately the goals are the same. In this section, therefore, the DetNet specifications will be used as a source of inspiration for ideas, but not as an absolute source of truth.
 
-Deterministic networks have been discussed in the background chapter. In order to guarantee determinism the Internet Engineering Task Force (IETF) DetNet working group has proposed an architecture for determinism over IP networks \cite{detnet-arch}. Their specification identifies four key mechanisms for guaranteeing the determinism of a flow: 1) elimination of contention loss, 2) jitter reduction, 3) service protection, and 4) explicit routes. Since the 5G campus environment may need to use the infrastructure of other operators this rules out the ability to use explicit routes. A key difference between deterministic networks and 5G campus backhaul networks is that the operator may not control all the links between nodes, and that there are only two nodes in the network that are definitely under the administrator's control- the WAN Connectors at the core and the edge. In such a scenario the problem is less like a network and more like a client-server application with multiple paths between the client and the server.
+Deterministic networks have been discussed in the background chapter. In order to guarantee determinism the IETF DetNet working group has proposed an architecture for determinism over IP networks \cite{detnet-arch}. Their specification identifies four key mechanisms for guaranteeing the determinism of a flow: 1) elimination of contention loss, 2) jitter reduction, 3) service protection, and 4) explicit routes. Since the 5G campus environment may need to use the infrastructure of other operators this rules out the ability to use explicit routes. A key difference between deterministic networks and 5G campus backhaul networks is that the operator may not control all the links between nodes, and that there are only two nodes in the network that are definitely under the administrator's control- the WAN Connectors at the core and the edge. In such a scenario the problem is less like a network and more like a client-server application with multiple paths between the client and the server.
 
 \subsection{Elimination of Contention Loss and Bufferbloat}
 
@@ -140,7 +140,7 @@ Looking back on the previous subsections, the following points (in no particular
 
 Finally, before the next chapter's discussion of the individual components, the design of the internal architecture of the WAN connector is shown. Figure \ref{fig:arch} illustrates a scenario where the control plane element of the WAN connector is deployed on the same host that is backhauling traffic to a remote WAN Connector. The diagram is shown for just a single one-way flow. The left side of the diagram is sending the traffic to the right side. Under normal operation there would also be traffic going the other way, and both the "remote" and the "edge" WAN Connector's data planes would be performing the tasks shown in the "sender" and "receiver" boxes. However this representation hopefully makes it easier to understand the tasks that the WAN Connectors will usually be performing simultaneously, without cluttering the image. 
 
-The WAN connector is split into a control plane, which uses the algorithm in \ref{pof-alg} to choose which interfaces to forward on, and a data plane, which performs the forwarding, as well as any necessary buffering, re-ordering and/or de-duplication. Statistics are reported from the user plane back to the control plane. The WAN connector performs different tasks depending on whether it is the origin or termination of a flow. For example, the terminating node may be receiving duplicate packets on the other paths, and it must know to drop these. Additionally, the sender, can only store statistics about how many bytes it has sent, and on what paths. The receiver, however, is able to use the information contained in the packets it has received to construct a complete picture about the nature of the path - its jitter, latency and also packet loss. The link selector in the control plane can then use this information to make its decisions. When deploying the WAN Connector there is only one Control Plane unit (the controller), and two Data Plane instances. This is because it would be redundant to deploy an additional controller for the remote data plane instance. In the event that each link fails then the remote controller cannot help, even though it can detect it, and if at least one link remains up then the core controller will switch to using that link and can inform the data plane unit to do the same. As has been mentioned before, the graphic depicts a situation in which one of the data plane instances is deployed on the same host as the control plane component. This does not need to be the case, the control plane could also be placed somewhere else entirely, however for the experiments performed in the evaluation chapter, and for the envisioned deployment, this co-location is most likely the easiest to administrate and deploy.
+The WAN connector is split into a control plane, which uses the algorithm in \ref{pof-alg} to choose which interfaces to forward on, and a data plane, which performs the forwarding, as well as any necessary buffering, re-ordering and/or de-duplication. Statistics are reported from the user plane back to the control plane. The WAN connector performs different tasks depending on whether it is the origin or termination of a flow. For example, the terminating node may be receiving duplicate packets on the other paths, and it must know to drop these. Additionally, the sender, can only store statistics about how many bytes it has sent, and on what paths. The receiver, however, is able to use the information contained in the packets it has received to construct a complete picture about the nature of the path - its jitter, latency and also packet loss. The link selector in the control plane can then use this information to make its decisions. When deploying the WAN Connector there is only one control plane unit (the controller), and two data plane instances. This is because it would be redundant to deploy an additional controller for the remote data plane instance. In the event that each link fails then the remote controller cannot help, even though it can detect it, and if at least one link remains up then the core controller will switch to using that link and can inform the data plane unit to do the same. As has been mentioned before, the graphic depicts a situation in which one of the data plane instances is deployed on the same host as the control plane component. This does not need to be the case, the control plane could also be placed somewhere else entirely, however for the experiments performed in the evaluation chapter, and for the envisioned deployment, this co-location is most likely the easiest to administrate and deploy.
 
 One part which is missing from this diagram is the traffic shaper. That is because it is not connected to the control and the data plane, rather it is meant to be installed alongside them. Furthermore, it is important that the traffic shaper resides in the part of the network before the packets enter the WAN connector. If the deployment features a UPF in the edge network, it may make sense to place the traffic shaper before this as well. For the core, the traffic shaper will similarly need to be placed at the ingress point where packets first enter the core network.
 
