--- a/backmatter/01_formats.tex
+++ b/backmatter/01_formats.tex
@@ -7,13 +7,13 @@
 
 This appendix contains excerpts of the JSON messages passed between the control plane and the data plane during operation. Listing \ref{lst:flow} shows how the control plane sends updates to the data plane nodes. Listing \ref{lst:stats} shows the format of the messages used for reporting statistics.
 
-These are the only two message formats used between the Control Plane and the Data Plane. These messages are sent over SCTP, UTF-8 encoded. They are the only data in the SCTP messages' body's. By using JSON there are three distinct advantages. Firstly, a new protocol doesn't need to be developed for the messaging between control and data plane. Secondly, the messages are both human and machine readable which makes for easier debugging. Lastly, because it is a hugely popular data format there are lots supporting libraries. 
+These are the only two message formats used between the control plane and the data plane. These messages are sent over SCTP, UTF-8 encoded. They are the only data in the SCTP messages' bodies. By using JSON there are three distinct advantages. Firstly, a new protocol doesn't need to be developed for the messaging between control and data plane. Secondly, the messages are both human and machine readable which makes for easier debugging. Lastly, because it is a hugely popular data format there are lots supporting libraries. 
 
-The messages which add new flows to the Data Plane contain the flow Description as well as its priority, and the Packet Ordering Function (POF) maximum delay, which was mentioned in the description of the POF algorithm in the approach.
+The messages which add new flows to the data plane contain the flow description as well as its priority, and the Packet Ordering Function (POF) maximum delay, which was mentioned in the description of the POF algorithm in the design and implementation chapters.
 
-In the reverse direction, when the Data Plane nodes report to the Control Plane, the statistics reported include firstly the paths description (source and destination IP address) as well as the number of packets and bytes received on that path, and the average jitter and latency experienced, both over the entire reporting period, and since the last message. Finally, the message are also sent with a list of the "sending" statistics. That is, the number of bytes and packets sent out on the WAN Connector's interfaces. Both the path and interface statistics are sent with three timestamps. One timestamp to describe the first packet sent or received during this reporting window, one to describe the last packet sent or received during that same reporting window, and a timestamp taken before the message itself was sent.
+In the reverse direction, when the data plane nodes report to the control plane, the statistics reported include the paths' descriptions (source and destination IP addresses) as well as the number of packets and bytes received on that path. They also include the average jitter and latency experienced, both over the entire reporting period, and since the last message. Finally, the message are also sent with a list of the "sending" statistics. That is, the number of bytes and packets sent out on the WAN Connector's interfaces. Both the path and interface statistics are sent with three timestamps. One timestamp to describe the first packet sent or received during this reporting window, one to describe the last packet sent or received during that same reporting window, and a timestamp taken before the message itself was sent (the heartbeat timestamp).
 
-By including the "sending" statistics, the WAN Connector is able to inform it's own Control Plane if an interface is being actively used. On the receiving side, if an interface has not received packets from the respective source in too long a time, then the Control Plane can infer complete link failure. This is crucial for the ability of the WAN Connector to switch all user traffic off of dead links. Once a link works again, the WAN Connector will detect this when it receives the periodically sent probe packets.
+By including the "sending" statistics, the data plane is able to inform the control plane if an interface is being actively used. On the receiving side, if an interface has not received packets from the respective source in too long a time, then the control plane can infer complete link failure. This is crucial for the ability of the WAN Connector to switch all user traffic off of dead links. Once a link stats working again, the WAN Connector will detect this when it receives the periodically sent probe packets.
 
 In order to save space this message was edited for display so that it only contains messages about two of the available paths instead of all the paths.
 
@@ -63,33 +63,6 @@ In order to save space this message was edited for display so that it only conta
         "dstPortStart": 0,
         "dstPortEnd": 0,
         "protocol": 17,
-        "direction": "in"
-      },
-      "POFmaxDelayMicros": 0,
-      "nForwarding": 1,
-      "decisions": [
-        {
-          "interfaceName": "link3",
-          "remoteEndpoint": {
-            "ip": "10.1.22.21",
-            "port": 2152
-          }
-        }
-      ]
-    },
-    {
-      "flowID": 3,
-      "priority": 1,
-      "flowDescription": {
-        "src": "10.0.0.31",
-        "srcSubnet": 24,
-        "srcPortStart": 0,
-        "srcPortEnd": 0,
-        "dst": "10.0.3.31",
-        "dstSubnet": 24,
-        "dstPortStart": 0,
-        "dstPortEnd": 0,
-        "protocol": 6,
         "direction": "in"
       },
       "POFmaxDelayMicros": 0,
